# CMqttSnForwarder

./: .clang-format  .drone.yml  .dronefull.yml  .droneminimal.yml  .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMqttSnForwarderArduino.cpp  CMqttSnForwarderArduino.h  CMqttSnForwarderArduino.hpp  Dockerfile  MqttSnArduino.h  MqttSnClientArduino.hpp  MqttSnClientNetworkArduino.hpp  MqttSnDiscoveredGatewayList.hpp  MqttSnForwarderArduino.hpp  MqttSnGatewayNetworkArduino.hpp  MqttSnParserArduino.hpp  MqttSnSharedNetwork.hpp  README.md  TODO  cmqttsnforwarder_help  cp_MqttSnClientPub.sh  lcovrc  library.json  platformio.ini  tcptestermain.c  testermain.c  udptestermain.c
CMakeModules/: CodeCoverage.cmake
client/: MqttSnClient.c  MqttSnClient.h  MqttSnClientAsync.c  MqttSnClientAsync.h  MqttSnClientAwaitMessage.c  MqttSnClientAwaitMessage.h  MqttSnClientAwaitMessageStrut.h  MqttSnClientConfig.h  MqttSnClientConnectionStatus.h  MqttSnClientFindGatewayPattern.h  MqttSnClientLogger.c  MqttSnClientLogger.h  MqttSnClientMethod.c  MqttSnClientMethod.h  MqttSnClientMsgHandlerReturnValue.h  MqttSnClientReceivedAdvertise.h  MqttSnClientReceivedGwInfo.h  MqttSnClientRegistration.h  MqttSnClientReturnCode.h  MqttSnFindGatewayClient.c  MqttSnFindGatewayClient.h  TODO
client/publish/: main.c
client/subscribe/: main.c
common/discoveredgw/: MqttSnClientDiscoveredGateway.c  MqttSnClientDiscoveredGateway.h
common/timeout/: MqttSnClientTimeout.c  MqttSnClientTimeout.h
config/: client_connect_config.c  client_find_mqtt_sn_gateway_config.c  client_find_mqtt_sn_gateway_config.h  client_network_config.c  client_network_config.h  client_publish_config.c  client_publish_config.h  client_register_config.c  client_register_config.h  client_subscribe_config.c  client_subscribe_config.h  config_command_helper.c  config_command_helper.h  gateway_network_config.c  gateway_network_config.h  mqtt_sn_gateway_config.c  mqtt_sn_gateway_config.h  mqtt_sn_logger_config.c  mqtt_sn_version_config.c  mqtt_sn_version_config.h
config/client/: MqttSnClient_config.c  MqttSnClient_config.h  client_connect_config.c  client_connect_config.h  (+20 more)
echogateway/: echogateway.c  echogateway.h
forwarder/: MqttSnClientNetworkInterface.c  MqttSnClientNetworkInterface.h  MqttSnFixedSizeRingBuffer.c  MqttSnFixedSizeRingBuffer.h  MqttSnFordwarder.c  MqttSnForwarder.c  MqttSnForwarder.h  MqttSnForwarderLogging.c  MqttSnForwarderLogging.h  MqttSnForwarderParser.c  MqttSnForwarderParser.h  MqttSnGatewayNetworkInterface.c  MqttSnGatewayNetworkInterface.h  MqttSnMessageParser.c  MqttSnMessageParser.h  TODO  global_defines.h
gateway/: MqttClient.c  MqttClient.h  MqttSnGateway.c  MqttSnGateway.h  MqttSnGatewayClientConnectionHandler.c  MqttSnGatewayClientConnectionHandler.h  MqttSnGatewayDiscoveryHandler.c  MqttSnGatewayDiscoveryHandler.h  MqttSnGatewayForwarder.c  MqttSnGatewayForwarder.h  MqttSnGatewayStatus.h
gateway_old/: MQTT.CON  MQTTSN.CON  README.md  TOPICS.PRE  main.cpp
input/: MqttSnInputInterface.c  MqttSnInputInterface.h
logging/: MqttSnLogging.c  MqttSnLogging.h  MqttSnLoggingInterface.c  MqttSnLoggingInterface.h
main/: MqttSnForwarderLogging.c  MqttSnForwarderLogging.h  config.h  forwarder_config.c  forwarder_config.h  forwarder_starter.c  forwarder_starter.h  main.c  main.cpp  tcpmain.c  udpmain.c
network/: MqttSnClientNetworkInterface.c  MqttSnClientNetworkInterface.h  MqttSnGatewayNetworkInterface.c  MqttSnGatewayNetworkInterface.h  mqtt_sn_client_interactive_tcp_buffer.c  mqtt_sn_client_interactive_tcp_buffer.h
parser/: MqttSnAdvertiseMessage.c  MqttSnAdvertiseMessage.h  MqttSnConnackMessage.c  MqttSnConnackMessage.h  MqttSnConnectMessage.c  MqttSnConnectMessage.h  MqttSnDisconnectMessage.c  MqttSnDisconnectMessage.h  MqttSnEncapsulatedMessageParser.c  MqttSnEncapsulatedMessageParser.h  MqttSnForwarderEncapsulationMessage.c  MqttSnForwarderEncapsulationMessage.h  MqttSnGwInfoMessage.c  MqttSnGwInfoMessage.h  MqttSnMessageParser.c  MqttSnMessageParser.h  MqttSnPingReqMessage.c  MqttSnPingReqMessage.h  MqttSnPingRespMessage.c  MqttSnPingRespMessage.h  MqttSnPubackMessage.c  MqttSnPubackMessage.h  MqttSnPublishMessage.c  MqttSnPublishMessage.h  MqttSnPublishMessageParser.c  MqttSnPublishMessageParser.h  MqttSnPubrecMessage.c  MqttSnPubrecMessage.h  MqttSnPubrecPubrelPubcompMessage.c  MqttSnPubrecPubrelPubcompMessage.h  MqttSnRegAckMessage.c  MqttSnRegAckMessage.h  MqttSnRegister.c  MqttSnRegister.h  MqttSnRegisterMessage.c  MqttSnRegisterMessage.h  MqttSnSearchGwMessage.c  MqttSnSearchGwMessage.h  MqttSnSubackMessage.c  MqttSnSubackMessage.h  (+23 more)
platform/: MqttSnMessageData.c  MqttSnMessageData.h  device_address.c  device_address.h  platform_compatibility.c  platform_compatibility.h
plugins/: CMakeLists.txt  TODO
plugins/network/client/plugin/: client_network_plugin_interface.h  hiredis_client_network_plugin.c  hiredis_client_network_plugin.h
plugins/network/gateway/plugin/: gateway_plugin_interface.h  hiredis_gateway_network_plugin.c  hiredis_gateway_network_plugin.h
plugins/network/gateway/plugin/hiredis/: hiredis_gateway_network_plugin.c  hiredis_gateway_network_plugin.h
plugins/network/shared/plugin/: plugin_device_address_converter.c  plugin_device_address_converter.h  plugin_json.c  plugin_json.h
plugins/network/shared/plugin/hiredis/: hiredis_network_plugin.c  hiredis_network_plugin.h
ringbuffer/: MqttSnFixedSizeRingBuffer.c  MqttSnFixedSizeRingBuffer.h
shorttests/: ExplorativeMqttMqttSnEvaluation.cpp  MqttClientTestContainerMainSync.cpp  MqttNetworkBuilderTestMain.cpp  MqttSnDefaultNetworkExample.cpp  MqttSnGatewayBrokerTestMain.cpp  MqttSnNetworkBuilderTestSequenceMain.cpp  pahotest1main.c  tcptestermain.c  udpmulticastmain.c  udptestermain.c
test/: .clang-format  MqttSnForwarder_LinuxTcpClientNetwork_Tests.cpp  MqttSnForwarder_LinuxTcpGatewayNetwork_Tests.cpp  MqttSnForwarder_Tests.cpp
testclients/: MqttClientTestContainerMainSync.cpp  MqttNetworkBuilderTestMain.cpp  MqttNetworkBuilderTestSequenceMain.cpp  pahotest1main.c  tcptestermain.c  udpmulticastmain.c  udptestermain.c
(+956 files in other folders)
